# SimpleDownloadManager

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: defaultDirs.h  download.h  downloadLog.h  downloadmodel.h  mainwindow.h  ui_inputdialog.h  ui_mainwindow.h
resource/: resoure.qrc
src/: download.cpp  downloadLog.cpp  downloadmodel.cpp  main.cpp  mainwindow.cpp
ui/: MainWindow.ui  inputdialog.ui
